# mkdocs-test

./: .gitignore  README.md  cleanup.sh  pyproject.toml  readthedocs.yml  update_pypi.sh
mkdocs_test/: __init__.py  common.py  lorem.py  plugin.py
test/: test_ad_hoc.py  test_simple.py  test_various.py
test/advanced/: mkdocs.yml  test_advanced.py
test/advanced/docs/: index.md
test/advanced/docs/other/: third.md
test/alter_markdown/: hooks.py  mkdocs.yml  test_site.py
test/alter_markdown/docs/: index.md  second.md
test/simple/: mkdocs.yml  test_site.py
test/simple/docs/: second.md
test/simple_macros/: mkdocs.yml  test_macros.py
test/simple_macros/docs/: index.md  second.md
webdoc/: extra_requirements.txt  mkdocs.yml
webdoc/docs/: advanced.md  api.md  developers.md  how_to.md  index.md  install.md  projects.md
