[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-test"
version = "0.5.0"
description = "A test framework for MkDocs projects"
authors = [
    { name = "Laurent Franceschetti" }
]
license = { text = "LICENSE" }

readme = "README.md"

dependencies = [
    "beautifulsoup4",
    "markdown",
    "pandas"
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Source = "https://github.com/fralau/mkdocs-test"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "toml-cli"
]



[tool.mkdocs]
site_name = "MkDoc Test Documentation"

[tool.mkdocs.plugins]
test = {}

[project.entry-points."mkdocs.plugins"]
test = "mkdocs_test.plugin:TestPlugin"

